--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 33/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 81 points<br>
+Unlocked 33/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 82 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -74,6 +74,7 @@ Unlocked 33/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
 <li><div class="title">Cherry Picker</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-cherry-pick.html">git-cherry-pick</a> to add a sha from another branch into the current branch.</div></li>
 <li><div class="title">Collector (Level 4)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
+<li><div class="title">Collector (Level 5)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Dentist</div>  <div class="info">Extracted patches using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -p.</div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Historian (Level 4)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
@@ -96,38 +97,39 @@ Unlocked 33/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   8284 rev-parse
-   8166 ls-files
-   8135 symbolic-ref
-    578 status
-    268 checkout
-    235 pull
-    129 log
+   8953 rev-parse
+   8832 ls-files
+   8806 symbolic-ref
+    619 status
+    277 checkout
+    259 pull
+    132 log
     116 branch
-    109 add
-    103 commit
-     73 diff
-     71 push
-     56 help
-     47 reset
+    111 add
+    108 commit
+     76 diff
+     75 push
+     57 help
+     54 reset
      40 tag
-     35 stash
-     35 show
-     30 fetch
-     28 merge
+     38 stash
+     38 show
+     32 fetch
+     30 merge
      20 achievements
      19 revert
      13 clean
-      8 submodule
+     10 submodule
       8 instaweb
       8 config
       8 clone
       6 init
+      5 gc
       4 Wed
       4 --version
-      4 gc
       3 whatchanged
       3 Thu
+      3 rm
       3 remote
       3 rebase
       3 mv
@@ -137,7 +139,6 @@ Git commands sorted by usage:
       2 cherry-pick
       2 blame
       2 apply
-      1 rm
       1 grep
 </pre>
 <script type="text/javascript">
