--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 33/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 84 points<br>
+Unlocked 33/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 85 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -69,6 +69,7 @@ Unlocked 33/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Author (Level 5)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Author (Level 6)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Banker (Level 4)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
+<li><div class="title">Banker (Level 5)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Baptised</div>  <div class="info">Set global user name using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Blacksmith (Level 4)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Blacksmith (Level 5)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
@@ -99,25 +100,25 @@ Unlocked 33/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   9439 rev-parse
-   9310 ls-files
-   9299 symbolic-ref
+   9453 rev-parse
+   9324 ls-files
+   9313 symbolic-ref
     665 status
-    286 checkout
-    270 pull
-    133 log
+    288 checkout
+    271 pull
+    135 log
     121 branch
     120 add
-    115 commit
+    116 commit
      84 diff
-     76 push
+     77 push
      59 help
      56 reset
      40 tag
      40 show
      38 stash
      34 fetch
-     30 merge
+     32 merge
      20 achievements
      19 revert
      14 clean
