--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 33/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 85 points<br>
+Unlocked 33/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 86 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -30,6 +30,7 @@ Unlocked 33/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Apprentice Cathedral Architect (Level 1)</div>  <div class="info">Added a submodule to a repository.</div></li>
 <li><div class="title">Apprentice Cathedral Architect (Level 2)</div>  <div class="info">Added a submodule to a repository.</div></li>
 <li><div class="title">Apprentice Cathedral Worker (Level 1)</div>  <div class="info">Cloned submodule repository and checked out commits specified by superproject.</div></li>
+<li><div class="title">Apprentice Cathedral Worker (Level 2)</div>  <div class="info">Cloned submodule repository and checked out commits specified by superproject.</div></li>
 <li><div class="title">Apprentice Chimney Sweeper (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Apprentice Chimney Sweeper (Level 2)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Apprentice Cleaning lady (Level 1)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
@@ -100,21 +101,21 @@ Unlocked 33/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   9453 rev-parse
-   9324 ls-files
-   9313 symbolic-ref
-    665 status
-    288 checkout
+   9472 rev-parse
+   9343 ls-files
+   9332 symbolic-ref
+    668 status
+    289 checkout
     271 pull
-    135 log
+    137 log
     121 branch
     120 add
     116 commit
      84 diff
      77 push
      59 help
-     56 reset
-     40 tag
+     57 reset
+     41 tag
      40 show
      38 stash
      34 fetch
@@ -122,7 +123,7 @@ Git commands sorted by usage:
      20 achievements
      19 revert
      14 clean
-     10 submodule
+     12 submodule
       8 instaweb
       8 config
       8 clone
@@ -132,6 +133,7 @@ Git commands sorted by usage:
       4 Wed
       4 --version
       4 rebase
+      4 cherry-pick
       3 Thu
       3 rm
       3 remote
@@ -139,7 +141,6 @@ Git commands sorted by usage:
       3 ls-remote
       3 format-patch
       2 web--browse
-      2 cherry-pick
       2 blame
       2 apply
       1 grep
